[package]
name = "arkime_pcap_aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = { version = "0.9"}
exitcode = "1.1.2"
itertools = "0.7.8"
sscanf = "0.2.1"
clap = { version = "3.1.18", features = ["derive"] }
chrono = "0.4"
regex = "1.5"